[package]
name = "actix-http"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
async-trait = "0.1.51"
serde = { version = "1", features = ["derive"] }
warehouse_core = { path = "../core" }
repository-postgres = { path = "../repository/postgres" }
