[package]
name = "repository-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuidv07"] }
warehouse_core = { path = "../../core" }
async-trait = "0.1.51"
dotenv = "0.15.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
